- Added character photos
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
 				    		</dt>
 				    		<dd>
 				    			<div style="margin-top: 10px">
-					    		    <div class="description lastDesc" style:"font-size: 32px; font-color: #000;">
-					    		    	Benvenuto!
+				    				<img src="img/group_photo.png" class="detail big"/>
+					    		    <div class="description lastDescFirst">
+					    		    	Benvenuto!<br />
+					    		    	Questa &egrave; la casa del cartone animato dedicato alle avventure di Leo, Tilde e Pixel.
+					    		    	Clicca col mouse su ciascun nome che appare al lato sinistro di questa pagina.
+					    		    	<br /> Non dimenticare di seguici su <a href="https://www.facebook.com/event.php?eid=300617296620968">Facebook</a> e <a href="https://twitter.com/#!/openmediacenter">Twitter</a> per conoscere le novit&agrave; scoprire dove verr&agrave; proiettato il cartone.
+					    		    	 E buon divertimento! 	
 					    		    </div>
 				    		    </div>	
 				    		</dd>
@@ -96,7 +101,7 @@
 					        	<h1>Albert</h1>
 					        </dt>
 					        <dd>
-					        	<img src="img/dummy.png" class="detail"/>
+					        	<img src="img/albert.png" class="detail"/>
 						        <div style="margin-top: 10px">
 						        	<span class="field">Nome:</span>
 						        	<span class="description">Albert</span>
@@ -121,7 +126,7 @@
 					        	<h1>Pixel</h1>
 					        </dt>
 					        <dd>
-					        	<img src="img/dummy.png" class="detail"/>
+					        	<img src="img/pixel.png" class="detail"/>
 						        <div style="margin-top: 10px">
 						        	<span class="field">Nome:</span>
 						        	<span class="description">Pixel</span>
@@ -130,7 +135,7 @@
 						        	<span class="description">4 Anni</span>
 						        	<br /> 
 						        	<span class="field">Hobby:</span>
-						        	<span class="description">dormire sopra il computer e andare in giro per il Parco</span>
+						        	<span class="description">dormire sopra il computer</span>
 						        	<br />
 						        	<span class="field">Aspirazioni:</span>
 						        	<span class="description">Rincorrere Jerry</span>
@@ -146,7 +151,7 @@
 					        	<h1>Robocat</h1>
 					        </dt>
 					        <dd>
-					        	<img src="img/dummy.png" class="detail"/>
+					        	<img src="img/robocat.png" class="detail"/>
 					        	<div style="margin-top: 10px">
 						        	<span class="field">Nome:</span>
 						        	<span class="description">Robocat</span>
