- Modified spine - Added colors on the slides - Footer images modified for better visualization in other browser than Chrome - Added Tilde image - Added infos to ignore file
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				    		</dd>
 				    
 					        <dt>
-					        	<h1>Leo</h1>
+				        	<h1 id ="one">Leo</h1>
 					        </dt>
 					        <dd>
 					        	<img src="img/leo.png" class="detail"/>
@@ -73,10 +73,10 @@
 						        </div>	
 					        </dd>
 					        <dt>
-					        	<h1>Tilde</h1>
+					        	<h1 id ="two">Tilde</h1>
 					        </dt>
 					        <dd>
-						        <img src="img/dummy.png" class="detail"/>
+						        <img src="img/tilde.png" class="detail"/>
 						        <div style="margin-top: 10px">		
 						        	<span class="field">Nome:</span>
 						        	<span class="description">Tilde, Matilde solo nei momenti importanti</span>
@@ -98,7 +98,7 @@
 						        </div>
 					        </dd>
 					        <dt>
-					        	<h1>Albert</h1>
+					        	<h1 id ="three">Albert</h1>
 					        </dt>
 					        <dd>
 					        	<img src="img/albert.png" class="detail"/>
@@ -123,7 +123,7 @@
 						        </div>
 					        </dd>
 					        <dt>
-					        	<h1>Pixel</h1>
+					        	<h1 id ="four">Pixel</h1>
 					        </dt>
 					        <dd>
 					        	<img src="img/pixel.png" class="detail"/>
@@ -148,7 +148,7 @@
 								</div>
 					        </dd>
 					        <dt>
-					        	<h1>Robocat</h1>
+					        	<h1 id ="five">Robocat</h1>
 					        </dt>
 					        <dd>
 					        	<img src="img/robocat.png" class="detail"/>
