-Added an id -Close tag added
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 			<!-- Social Networks Icons --> 
 			<div id="social">
 				<a href="https://www.facebook.com/event.php?eid=300617296620968" >
-					<img src="img/fb.png" alt="fb"/>
+					<img src="img/fb.png" alt="fb" id="facebook" />
 				</a>
 				<a href="https://twitter.com/#!/openmediacenter" />
-					<img src="img/twitter.png" alt="tweeter" id="twitter" >
+					<img src="img/twitter.png" alt="tweeter" id="twitter" />
 				</a>
 			</div>
 			<!-- End Social Network Section -->
