-Minor Fixes - Some text enlightement
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 				    			<div style="margin-top: 10px">
 				    				<img src="img/group_photo.png" alt="group_photo" class="detail big" />
 					    		    <div class="description firstPage lastDesc">
-					    		    	Benvenuto!<br />
-					    		    	Questa &egrave; la casa del cartone animato dedicato alle avventure di <span>Leo</span>, <span>Tilde</span> e <span>Pixel</span>.
-					    		    	<br /> Non dimenticare di seguici su <a href="https://www.facebook.com/event.php?eid=300617296620968">Facebook</a> e <a href="https://twitter.com/#!/openmediacenter">Twitter</a> per conoscere le novit&agrave; scoprire dove verr&agrave; proiettato il cartone.
-					    		    	 E buon divertimento! 	
+					    		    	Chi è Pixel? Cosa potranno mai fare due ragazzini a Polaris, il Parco Scientifico e Tecnologico della Sardegna, tra computer e ricercatori?
+					    		    	Sfoglia le schede dei personaggi e vieni a scoprire la loro avventurosa storia al Festival della Scienza di Cagliari, all'Exmà dal 5 al 8 Novembre 2011.
+					    		    	Per info e prenotazioni <a href="http://www.scienzasocietascienza.eu/">http://www.scienzasocietascienza.eu </a>	
 					    		    </div>
 				    		    </div>	
 				    		</dd>
@@ -60,7 +59,7 @@
 						        	<span class="field">Hobby:</span>
 						        	<span class="description">computer, astrofisica, informatica e videogiochi</span>
 						        	<br />
-						        	<span class="field">Aspirazioni:</span>
+						        	<span class="field plate">Aspirazioni:</span>
 						        	<span class="description">Diventare scienziato come la mamma</span>
 						        	<br />
 						        	<span class="field plate">Piatto preferito:</span>
@@ -85,7 +84,7 @@
 						        	<span class="field">Hobby:</span>
 						        	<span class="description">Accudire i piccoli animali, pallavolo, computer</span>
 						        	<br />
-						        	<span class="field">Aspirazioni:</span>
+						        	<span class="field plate">Aspirazioni:</span>
 						        	<span class="description">Fare la veterinaria come il papà</span>
 						        	<br />
 						        	<span class="field plate">Piatto preferito:</span>
@@ -110,7 +109,7 @@
 						        	<span class="field">Hobby:</span>
 						        	<span class="description">Fotografia, viaggi e bicicletta</span>
 						        	<br />
-						        	<span class="field">Aspirazioni:</span>
+						        	<span class="field ">Aspirazioni:</span>
 						        	<span class="description">Vincere il Nobel</span>
 						        	<br />
 						        	<span class="field plate">Piatto preferito:</span>
@@ -164,11 +163,38 @@
 						        	<span class="description">Robocat 2.0</span>
 						        	<br />
 						        	<span class="field plate">Piatto preferito:</span>
-						        	<span class="description">10010100110010001111</span><br/>
+						        	<span class="description">11000100110100101110100</span><br/>
 						        	<div class="description lastDesc">Robocat ha le sembianze di una gattina ma &egrave; un sofisticato dispositivo in via di sperimentazione. Ha un cuore elettronico che pulsa...
 						        	</div>
 								 </div>
 							 </dd>
+							 <dt id ="credits">
+							 	Credits
+							 </dt>
+							 <dd>
+							 	<div style="margin-top: 10px">
+							 		<div class="description">
+							 		<p>
+							     		<em>"Alla Ricerca del Pixel perduto"</em> &egrave; una storia realizzata per un'applicazione
+							     		interattiva sviluppata dal Laboratorio OMC e dal CRS4.<br />
+							     		<a href="http://www.labomc.it/pixelstory">http://www.labomc.it/pixelstory</a>
+							     	</p>
+							     	<p>
+							     		Storia e personaggi ideati da <strong>Gavino Paddeu</strong> e <strong>Selene Uras</strong> con la collaborazione di <strong>Ivan Marcialis</strong>.
+							     	</p>
+							     	<p>
+							     		Applicazione interattiva a cura del <a href="http://www.labomc.it">Lab OMC</a> (Massimo Deriu e Daniele Ardu).
+							     	</p>
+							     	<p>
+							     		Sito web a cura di <strong>Simone Kalb</strong>.
+							     	</p>
+							     	<p>
+							     		Animazioni e grafica a cura di <a href="http://www.seies.it">Seiès Comunicazione</a> e <a href="http://www.seies.it">Design</a>.
+							     	</p>
+							     	</div>
+							 	 </div>
+							  </dd>
+							 
 				   	</dl>				   	
 				</div>
 				<script type="text/javascript">
@@ -195,7 +221,7 @@
 				<a href="https://www.facebook.com/event.php?eid=300617296620968" >
 					<img src="img/fb.png" alt="fb" id="facebook" />
 				</a>
-				<a href="https://twitter.com/#!/openmediacenter" />
+				<a href="https://twitter.com/#!/openmediacenter" >
 					<img src="img/twitter.png" alt="tweeter" id="twitter" />
 				</a>
 			</div>
