--- a/index.html
+++ b/index.html
@@ -3,51 +3,66 @@
 	<head>
 		<title>:: Alla ricerca del Pixel perduto ::</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/index.css" type="text/css" media="screen" />
-		<link rel="stylesheet"  href="css/slidedeck/slidedeck.skin.css"  type="text/css" media="screen" />
-		<link rel="stylesheet" href="css/literally/skin.css" type="text/css" media="screen" />
-		<!-- Styles for the skin that only load for Internet Explorer -->
-		<!--[if lte IE 8]>
-		<link rel="stylesheet" type="text/css" href="css/slidedesk/slidedeck.skin.ie.css" media="screen,handheld" />
-		<![endif]-->
+		<meta name="author" content="Simone Kalb">
+		<meta http-equiv="cache-control" content="public">
 		<link href='http://fonts.googleapis.com/css?family=Terminal+Dosis:400,800,700,600' rel='stylesheet' type='text/css'>
-		<script type="text/javascript" src="css/slidedeck/jquery-1.3.2.min.js"></script>
+		<link rel="stylesheet" href="css/index.css" type="text/css" media="screen" />
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function() {
-			$(".label.leo").click(function () {
-		    	  $(".picture").fadeOut("fast");
-		    	  $(".picture.leo").show("slide", { direction: "right" }, 1000);
+			$(".label .leo").click(function(){
+				  $(".picture").fadeOut("fast");
+				  $(".picture.leo").show("slide", { direction: "right" },1000);
 			});
-			$(".label.tilde").click(function () {
-				$(".picture").fadeOut("fast");
-				$(".picture.tilde").show("slide", { direction: "right" }, 1000);
+			$(".label .tilde").click(function(){
+				  $(".picture").fadeOut("fast");
+				  $(".picture.tilde").show("slide", { direction: "right" },1000);
 			});
-			$(".label.albert").click(function () {
-				$(".picture").fadeOut("fast");
-				$(".picture.albert").show("slide", { direction: "right" }, 1000);
+			$(".label .albert").click(function(){
+				  $(".picture").fadeOut("fast");
+				  $(".picture.albert").show("slide", { direction: "right" },1000);
 			});
-			$(".label.pixel").click(function () {
-			  	$(".picture").fadeOut("fast");
-				$(".picture.pixel").show("slide", { direction: "right" }, 1000);
+			$(".label .pixel").click(function(){
+				  $(".picture").fadeOut("fast");
+				  $(".picture.pixel").show("slide", { direction: "right" },1000);
 			});
-			$(".label.robocat").click(function () {
-				$(".picture").fadeOut("fast");
-				$(".picture.robocat").show("slide", { direction: "right" }, 1000);
+			$(".label .robocat").click(function(){
+				  $(".picture").fadeOut("fast");
+				  $(".picture.robocat").show("slide", { direction: "right" },1000);
 			});
-		
 		});
 		</script>
 	</head>
 	<body>
+		
 		<!-- Main Content Section -->
 		<div id="mainContainer">
 			<!-- Header Section -->
+			<div class="label">
+				<div class="leo">
+					<img src="img/label_leo.png" />		
+				</div>	
+				<div class="tilde">
+					<img src="img/label_tilde.png" />
+				</div>
+				<div class="albert">
+					<img src="img/label_albert.png" />
+				</div>
+				<div class="pixel">
+					<img src="img/label_pixel.png" />		
+				</div>
+				<div class="robocat">
+					<img src="img/label_robocat.png" />		
+				</div>
+			</div>
 			<div id="header">		
 				<img id="logo" src="img/titolo.png" alt="Header"/>
-				<img id="photo_group" src="img/photo_group_footer.png" alt="Photo Group" />
+				<img id="photo_group" src="img/photo_group_footer.png" alt="Photo Group" />	
 				<img id="logos_bg" src="img/logos_bg.png" alt="Logos" />
+				<div class="footer"> 
+					<img src="img/logos.png" />
+				</div>
 				<div class="picture leo" >
 					<span class="field">Nome:&nbsp; </span>
 					<span class="description">Leonardo, ma a lui piace essere chiamato Leo</span>
@@ -124,7 +139,7 @@
 					<div class="description lastDesc">Pixel &egrave; curioso e gli piace esplorare il mondo, anche se adora tornare a casa e dormire sul computer di Tilde. Segue sempre la sua padroncina ovunque vada
 					</div>
 				</div>
-				<div class="picture robocat"
+				<div class="picture robocat">
 					<span class="field">Nome:</span>
 					<span class="description">Robocat</span>
 					<br /> 
@@ -146,23 +161,6 @@
 			<!-- End Header Section -->		
 		</div>
 		<!-- Main Content Section -->
-		<div class="footer"> 
-			<img src="img/logos.png" />
-		</div>
-		<div class="label robocat">
-			<img src="img/label_robocat.png" />		
-		</div>
-		<div class="label pixel">
-			<img src="img/label_pixel.png" />		
-		</div>
-		<div class="label leo">
-		<img src="img/label_leo.png" />		
-		</div>	
-		<div class="label tilde">
-		<img src="img/label_tilde.png" />
-		</div>
-		<div class="label albert">
-		<img src="img/label_albert.png" />
-		</div>	
+			
 	</body>
 </html>	
