-Valid HTML5 code
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<title>:: Alla ricerca del Pixel perduto ::</title>
-		<meta charset="utf-8">
-		<meta name="author" content="Simone Kalb">
-		<meta http-equiv="cache-control" content="public">
+		<meta charset="utf-8" />
+		<meta name="author" content="Simone Kalb" />
 		<link href='http://fonts.googleapis.com/css?family=Terminal+Dosis:400,800,700,600' rel='stylesheet' type='text/css' />
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.4.1/build/cssbase/cssbase-min.css">
-		<meta name="viewport" content="width=1600" /	>
+		<meta name="viewport" content="width=1600" />
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
@@ -57,19 +56,19 @@
 			<!-- Header Section -->
 			<div class="label">
 				<div class="leo">
-					<img src="img/label_leo.png" />		
+					<img src="img/label_leo.png" alt="label Leo"/>		
 				</div>	
 				<div class="tilde">
-					<img src="img/label_tilde.png" />
+					<img src="img/label_tilde.png" alt="label Tilde"/>
 				</div>
 				<div class="albert">
-					<img src="img/label_albert.png" />
+					<img src="img/label_albert.png" alt="label Albert"/>
 				</div>
 				<div class="pixel">
-					<img src="img/label_pixel.png" />		
+					<img src="img/label_pixel.png" alt="label Pixel"/>		
 				</div>
 				<div class="robocat">
-					<img src="img/label_robocat.png" />		
+					<img src="img/label_robocat.png" alt="label Robocat"/>		
 				</div>
 			</div>
 			<div id="header">		
@@ -77,7 +76,7 @@
 				<img id="photo_group" src="img/photo_group_footer.png" alt="Photo Group" />	
 				<img id="logos_bg" src="img/logos_bg.png" alt="Logos" />
 				<div class="footer"> 
-					<img src="img/logos.png" />
+					<img src="img/logos.png" alt="logos companies"/>
 				</div>
 				<div class="picture leo" >
 					<span class="field">Nome:&nbsp; </span>
@@ -181,6 +180,6 @@
 			<!-- End Header Section -->		
 		</div>
 		<!-- Main Content Section -->
-			
+	</div>		
 	</body>
 </html>	
