-Cleanup of the entire code -Added Code header and licence
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE HTML>
+<!--
+/****************************************
+*
+* $filename: index.html
+* $author: Simone Kalb
+* $email: kalb@crs4.it
+* $date: 10/28/2011
+* $licence: GPL 2.0
+* $licence_website:http://bit.ly/uaphoL
+*
+*****************************************/
+-->
 <html>
 	<head>
 		<title>:: Alla ricerca del Pixel perduto ::</title>
